# NaviTui

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
memory/: MEMORY.md  feature-roadmap.md  offline-download-design.md
navitui/: __init__.py  __main__.py  ai.py  anim.py  api.py  app.py  art.py  artcolor.py  card.py  cli.py  config.py  integrations.py  jukebox.py  macos_media.py  mcp.py  models.py  mpris.py  mutations.py  nowplaying.py  palette.py  player.py  playqueue.py  remote.py  screens.py  stats.py  terminal_probe.py  widgets.py  windows_media.py
tests/: test_cli.py  test_features_headless.py  test_player_audio.py  test_stats.py  test_terminal_probe.py
tools/: demo.py  remote_smoke.py  screenshots.py  shots.sh
