[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "navitui"
version = "0.4.0"
description = "A fast, animated TUI player for Navidrome — cover art in the terminal, playback via mpv, themes via ricekit"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Gheat" }]
requires-python = ">=3.11"
dependencies = [
    "textual>=1.0",
    "httpx>=0.27",
    "python-mpv>=1.0",
    "pillow>=10",
    "textual-image>=0.8",
    "ricekit @ git+https://github.com/Gheat1/ricekit",
]
keywords = ["navidrome", "subsonic", "music", "player", "tui", "terminal", "textual", "mpv"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Topic :: Terminals",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]

[project.optional-dependencies]
# media keys / desktop widgets (linux) and discord rich presence
integrations = ["dbus-fast>=2.21", "pypresence>=4.3"]
# MCP server — control a running NaviTui from Claude Code / any MCP client
mcp = ["mcp>=1.2"]

[project.urls]
Homepage = "https://github.com/Gheat1/NaviTui"
Repository = "https://github.com/Gheat1/NaviTui"
Issues = "https://github.com/Gheat1/NaviTui/issues"

[project.scripts]
navitui = "navitui:main"
navitui-mcp = "navitui.mcp:main"
navitui-remote = "navitui.cli:main"

[tool.setuptools]
packages = ["navitui"]
